--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Echo the name
-        run: |
-          export NAME=Kassim
-          echo the $NAME
+      - uses: actions/checkout@v3
+
+      - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 16
+    - run: npm ci
+    - run: npm run build
+    - run: npm test
+
+      
