--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,10 +6,8 @@ on:
 jobs:
   build-test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
@@ -18,4 +16,12 @@ jobs:
       - run: npm run build
       - run: npm test
 
-      
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "jokkke-app" #Must be unique in Heroku
+          heroku_email: "kassim91000@gmail.com"
